--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+
 </head>
+
 <body>
     <h1> Welcome to my component's library </h1>
+
+    <P> This is my first time doing something exiting, and would like you to embark this journey with me.</P>
+
+    <hr>
+
+    <h2> @Typogrpahy</h2>
+    <h1> this is the biggest you can get</h1>
+    <h2> this is second biggest</h2>
+    <p> this is paragragh size</p>
+    <small> this is teh smallest you can get</small>
+
+    <hr>
+
+    <h2> @containers</h2>
+    <h3> fluid container</h3>
+    <p> this goes to end of page</p>
+    <h3> centre container</h3>
+    <p> this is centred container with specific width </p>
+
+    <hr>
+
+    <h2> @links</h2>
+    <a href="/"> primary link </a>
+    <a href="/"> secondary link </a>
+
+    <hr>
+
+    <h2> @lists </h2>
+    <h3> undordered list</h3>
+    <ul>
+        <li> first item </li>
+        <li> second item </li>
+        <li> third item </li>
+    </ul>
+
+    <h3> undordered inline list</h3>
+    <ul>
+        <li> inline first item </li>
+        <li> inline second item </li>
+        <li> inline third item </li>
+    </ul>
+    <h3> reverse ordered list</h3>
+    <ol>
+        <li> home </li>
+        <li> nav </li>
+        <li> search</li>
+    </ol>
+
+    <hr>
+
+    <h2> @nav </h2>
+    <h3> I am me </h3>
+    <div> I am inevitable</div>
+    <ul>
+        <li> <a href="/"> HOME </a></li>
+        <li> <a href="/"> ABOUT </a> </li>
+        <li> <a href="/"> PROJECTS</a></li>
+    </ul>
+
+    <hr>
+
+    <h2> @Header </h2>
+    <header> <img src="images/hero image.svg" alt="" srcset="">
+        <h1> heading inside the header</h1>
+    </header>
+
+    <hr>
+
+    <h2> section </h2>
+    <SECTION>
+        <h3> white section</h3>
+        <p> this will have white background</p>
+    </SECTION>
+
+    <SECTION>
+        <h3> offwhite section</h3>
+        <p> this will have gray background</p>
+    </SECTION>
+    <hr>
+
+    <footer>
+        <div> social links and ending credits that is valiud in footer</div>
+        <ul>  
+            <li> insta </li>
+            <li> telegram </li>
+            <li> gmail </li>
+        </ul>
+    </footer>
+
+
+
+
 </body>
+
 </html>
