--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adarsh Balak</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <nav class=" navigation">
+        <h3 class="nav-brand color">  </h3>
+        <ul class=" nav-button navigation ">
+            <li class="inline-list link-active "> <a class="links" href="/"> HOME </a></li>
+            <li class="inline-list"> <a class="links" href="/"> ABOUT </a> </li>
+            <li class="inline-list"> <a class="links" href="/"> PROJECTS</a></li>
+        </ul>
+    </nav>
 
+    <header class="hero"> <img class="hero hero-image" src="images/hero image.svg" alt="" srcset="">
+        <h1 class="hero-heading"> Adarsh Balak: The Web Developer</h1>
+    </header>
+
+
+    <SECTION class="section offwhite-section">
+        <h3 class="section-h3"> Technologies</h3>
+        <p class="section-h3"> this will have gray background</p>
+    </SECTION>
 
 
 
